--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       DB_USERNAME: laravel_user
       DB_PASSWORD: 123456
     volumes:
-      - /var/www/html/data2:/var/lib/apache2
+      - ./:/app
 
 
   database:
