--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,39 @@
 version: '3'
 
 services:
-  application: 
+  notification-service: 
     build: .
     ports:
-      - "8000:8000"
+      - "8001:80"
     links: 
-      - database
+      - notification-db
     depends_on:
-      - database
+      - notification-db
 
-    environment: 
-      DB_HOST: database
-      DB_PORT: 3306
-      DB_DATABASE: laravel
-      DB_USERNAME: laravel_user
-      DB_PASSWORD: 123456
-    volumes:
-      - ./:/app
+    # environment: 
+      # DB_HOST: notification-db
+      # DB_PORT: 3306
+      # DB_DATABASE: laravel
+      # DB_USERNAME: laravel_user
+      # DB_PASSWORD: 123456
+    # env_file:
+    #   - .env
+    command: "bash -c 'php artisan migrate && apachectl -DFOREGROUND'"
 
 
-  database:
+  notification-db:
     image: 'mysql:5.7'
     ports:
-      - 13306:3306
+      - 23306:3306
 
     # the mysql image uses these to create database and users
-    environment: 
-      MYSQL_ROOT_PASSWORD: 'root'
-      MYSQL_DATABASE: laravel
-      MYSQL_USER: laravel_user
-      MYSQL_PASSWORD: '123456'
+    env_file:
+      - mysql.env
+    # environment: 
+      # MYSQL_ROOT_PASSWORD: 'root'
+      # MYSQL_DATABASE: laravel
+      # MYSQL_USER: laravel_user
+      # MYSQL_PASSWORD: '123456'
     volumes:
-      - /var/www/html/data:/var/lib/mysql
+      - $HOME/notification-service/mysql-data:/var/lib/mysql
 
