Docker network create

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.5'
 
 services:
   notification-service: 
@@ -9,6 +9,8 @@ services:
       - notification-db
     depends_on:
       - notification-db
+    networks:
+      - notification-network
 
     # environment: 
       # DB_HOST: notification-db
@@ -18,8 +20,8 @@ services:
       # DB_PASSWORD: 123456
     # env_file:
     #   - .env
-    command: "bash -c 'php artisan migrate && apachectl -DFOREGROUND'"
-
+    command: bash -c "php artisan migrate && apachectl -DFOREGROUND"
+    restart: on-failure:10
 
   notification-db:
     image: 'mysql:5.7'
@@ -35,5 +37,12 @@ services:
       # MYSQL_USER: laravel_user
       # MYSQL_PASSWORD: '123456'
     volumes:
+      - ./docker:/docker-entrypoint-initdb.d
       - $HOME/notification-service/mysql-data:/var/lib/mysql
+    networks:
+      - notification-network
+
+networks:
+  notification-network:
+    name: notification-network
 
